--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     
+    <h1>Convertidor de bases</h1>
+    
+    <form id="convertir">
+        <input type="number" max="16" min="2" id="baseOriginal" value="10">
+        <input type="text" placeholder="Numero" id="numeroOriginal">
+        <input type="number" max="16" min="2" id="baseFinal" value="10">
+        <input type="submit" value="convertir">
+    </form>
+
+    <br>
+    <input type="text" name="" id="numeroFinal" disabled>
+
+    <script src="bundle.js"></script>
 </body>
 </html>
