resolviendo problemas de ruta

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <br>
     <input type="text" name="" id="numeroFinal" disabled>
 
-    <script src="bundle.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 </html>
