--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <form class="form" id="convertir">
                 <label class="form__label">
                     <span>Base original: </span>
-                    <input class="form__label--input" type="number" max="16" min="2" id="baseOriginal" value="10">
+                    <input class="form__label--input" type="number" max="16" min="2" id="baseOriginal" value="16">
                 </label>
 
                 <label class="form__label">
                     <span>Número:</span>
-                    <input class="form__label--input" type="text" placeholder="Numero" id="numeroOriginal">
+                    <input value="c.c" class="form__label--input" type="text" placeholder="Numero" id="numeroOriginal">
                 </label>
 
                 <label class="form__label">
