--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                     <span>Número:</span>
                     <input value="c.c" class="form__label--input" type="text" placeholder="Numero" id="numeroOriginal">
                 </label>
+                
+                <input class="form_message" type="text" name="" id="alertMessage" value="El numero ingresado es incorrecto" disabled>
 
                 <label class="form__label">
                     <span>Base final: </span>
